force-app/main/default/objects/vlocity_cmt__PicklistValue__c/fields/vlocity_cmt__BooleanValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BooleanValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>