force-app/main/default/objects/vlocity_cmt__PicklistValue__c/fields/vlocity_cmt__DateTimeValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DateTimeValue__c</fullName>
    <label>Date Time Value</label>
    <type>DateTime</type>
</CustomField>