force-app/main/default/objects/vlocity_cmt__PicklistValue__c/fields/vlocity_cmt__PicklistId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PicklistId__c</fullName>
    <label>Vlocity Picklist</label>
    <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
    <relationshipName>PicklistValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>